@@ -98,6 +98,7 @@ $currpid=$pid;
 				echo "<div class=\"cens_header_right\"/>". $summary. "</div>";
 			}
 	echo "</div>";
+	
 
 	//-- Census & Source Information Area ============================================= 
 	echo "<div class=\" cens_container\">";
@@ -112,10 +113,10 @@ $currpid=$pid;
 	
 	//-- Search  and Add Family Members Area ========================================== 
 	?><!--[if IE]><br /><![endif]--><?php
-	echo "<div class=\"optionbox cens_search\">";
+	echo "<div class=\"cens_search\" style=\"overflow:-moz-scrollbars-horizontal;overflow-x:hidden;overflow-y:scroll;\">";
 		?>	<!--[if IE]><style>.cens_search{height:35.0em;}</style><![EndIf]-->
 			<!--[if lte IE 7]><style>.cens_search{margin-top:-0.7em;}</style><![EndIf]--><?php
-		include('modules/GEDFact_assistant/_CENS/census_3_search_add.php'); 
+		include('modules/GEDFact_assistant/_CENS/census_3_search_add.php');
 	echo "</div>";
 	
 	//-- Census Text Input Area =======================================================
